--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -381,8 +381,10 @@ font-family: 'Quicksand', sans-serif;
 
 .indiv-rating.about-user {
 	min-height: 100px;
-	height: 8vh;
-  font-size: 12px;
+//	height: 8vh;
+	overflow: auto;
+	height: 100%;
+  font-size: 12px;	
 }
 
 .bold-header {
@@ -403,6 +405,52 @@ font-family: 'Quicksand', sans-serif;
 
 .meals.user-meal {
 	height: 12vh;
+}
+
+//############################### Form Modal ###########################
+
+.yum-modal-backdrop {
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+	height: 100%;
+  z-index: 1031;	
+}
+
+.yum-modal {
+  width: 50%;
+  position: absolute;
+	top: 5%;
+  left: 25%;
+  z-index: 1032;
+  background-color: rgb(240, 240, 240);
+	color: black;
+  border-radius: 3px;
+  padding: 15px;
+}
+
+.yum-modal-dismiss {
+  float: right;
+  font-size: 130%;
+  &:hover {
+		
+    text-decoration: none;
+  }
+}
+
+.search-bar.modal-form, .modal-form {
+	width: 100%;
+	height: 40px;
+	border-radius: 0px;
+	-webkit-appearance: none;
+}
+
+.form-header {
+	border-bottom: 1px solid #e7e7e7;
 }
 
 //.host-pic.author {
