--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,10 +38,10 @@
 					</div>
 
 					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1" style="margin-top: 16px;">
-						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Guest Meals</a></li>
-						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Host Meals</a></li>
-						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">View Profile</a></li>
-						<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Edit Profile</a></li>
+						<li data-user-id="<%= current_user.id %>" class="menu-click" data-query="meals" role="presentation"><a role="menuitem" tabindex="-1" href="#">Meals</a></li>
+						<li data-user-id="<%= current_user.id %>" class="menu-click" data-query="listings" role="presentation"><a role="menuitem" tabindex="-1" href="#">Listings</a></li>
+						<!-- <li role="presentation"><a role="menuitem" tabindex="-1" href="#">View Profile</a></li> -->
+						<!-- <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Edit Profile</a></li> -->
 						<li role="presentation"><%= link_to "Sign out", session_url, method: :delete, role: "menuitem", tabindex: "-1" %></li>
 					</ul>
 					</li>
