--- a/app/assets/templates/meals/modal.jst.ejs
+++ b/app/assets/templates/meals/modal.jst.ejs
@@ -52,7 +52,7 @@
 		<br>
 		<div class="input-group">
 		  <span class="input-group-addon glyphicon glyphicon-calendar"></span>
-		  <input style="margin-top: 1px;" placeholder="Meal Date" name="date" value="<%= meal.escape('date') %>"  class="textbox-n search-bar modal-form" type="text" onfocus="(this.type='date')">
+		  <input style="margin-top: 1px; max-width: 11vw;" placeholder="Meal Date" name="date" value="<%= meal.escape('date') %>"  class="textbox-n search-bar modal-form" type="text" onfocus="(this.type='date')">
 		</div>
 		</div> <!-- close input area -->
 		</div> <!-- close text/input area -->
