--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,4 +1,7 @@
 <div class="container-fluid" style="margin-bottom: 20px;">
+<!-- <div class="row">
+	<div class="host-pic user" style="background-image: url('');"> </div>
+</div> -->
 <div class="row">
 	<div style="height: 50px; width: auto;"></div>
 	<div class="col-md-3 col-md-offset-1">
