--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -407,6 +407,22 @@ font-family: 'Quicksand', sans-serif;
 	height: 12vh;
 }
 
+.cover-photo {
+	width: 100%;
+	height: 50vh;
+	background-position: 50% 50%;
+	background-size: cover;
+	outline: none;
+	margin-right: -30px;
+}
+
+.click-header {
+	border: 1px solid #E7E7E7;
+	background-color: #F8F8F8;
+	height: 50px;
+	width: 100%;
+}
+
 //############################### Form Modal ###########################
 
 .yum-modal-backdrop {
