--- a/app/assets/templates/users/listings.jst.ejs
+++ b/app/assets/templates/users/listings.jst.ejs
@@ -1,10 +1,7 @@
 <div class="row">
-	<div class="col-md-6">
-    <h3> Listings </h3>
-  </div>
 	<% if (current_user.get('id') === user.get('id')) { %>
 	<div class="col-md-6">
- <button style="border-radius: 0px; -webkit-appearance: none; margin-top: 20px; margin-left: 2px; float: right;" type="submit" class='btn btn-default modal-button'>New Listing</button>
+ <button style="border-radius: 0px; -webkit-appearance: none; margin-top: 20px; margin-left: -15px;" type="submit" class='btn btn-default modal-button'>New Listing</button>
  </div>
  <% } %>
 </div>
