--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -1,20 +1,25 @@
 <div class="container-fluid" style="margin-bottom: 20px;">
 	<div style="height: 50px; width: auto;"></div>
-	<% if (user.host_meals().length > 0) { %>
+	<% var mealPhoto %>
+	<% if (!user.host_meals().models[0]) { %>
+		<% mealPhoto = "https://s3-us-west-1.amazonaws.com/yumster/cupcakes.jpg" %>
+	<% } else { %>
+		<% mealPhoto = user.host_meals().models[0].get("photo_url") %>
+	<% } %>
 		<div class="row">
-			<div class="cover-photo" style="background-image: url('<%= user.host_meals().models[0].get("photo_url") %>');">
+			<div class="cover-photo" style="background-image: url('<%= mealPhoto %>');">
 			</div>
 			<div class="row click-header" style="">
-				<div class="col-md-6 col-md-offset-4">
-					
+				<div class="col-md-6 col-md-offset-5">
+					<span data-action="meals" class="header-button"> Meals </span>
+					<span data-action="listings" class="header-button"> Listings </span>
 				</div>
 			</div>
 		</div>
-		<% } %>
 		<div class="row">
 			<div class="col-md-3 col-md-offset-1" style="margin-top: -200px;">
 		
-				<div class="host-pic user" style="background-image: url('<%= user.get("photo_url") %>');"> </div>
+				<div class="host-pic user profile" style="background-image: url('<%= user.get("photo_url") %>');"> </div>
 				<h2> <%= user.get("name") %> </h2>
 				<div class="row">
 					<span class="glyphicon glyphicon-map-marker"> </span>
