--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -421,6 +421,37 @@ font-family: 'Quicksand', sans-serif;
 	background-color: #F8F8F8;
 	height: 50px;
 	width: 100%;
+	margin-left: 0px;
+}
+
+.host-pic.user.profile:hover {
+	opacity: 1;
+}
+
+.header-button {
+	position: relative;
+	top: 0px;
+	left: 0px;
+	font-size: 25px;
+	border-right: 1px solid #E7E7E7;
+	border-left: 1px solid #E7E7E7;
+	width: 20vw;
+	margin-left: -1px;
+	height: 50px;
+	padding-top: 4px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 17px;
+	margin-top: 20px;
+	font-align: center;
+}
+
+.header-button:hover {
+	background-color: #E7E7E7;
+}
+
+.header-button:active {
+	background-color: #E7E7E7;
 }
 
 //############################### Form Modal ###########################
