--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -111,7 +111,12 @@
 				
 			<div class="row filter-div header-bar">
 				<div class="col-md-3 filter-header">
-					<%= meals.length %> Matches
+					<% if (meals.total_count) { %>
+					<%= meals.total_count %>
+					<% } else { %>
+					<%= meals.length %>
+					<% } %>
+					Matches
 					<span class="glyphicon glyphicon-chevron-down"></span>
 				</div>
 			</div>
