--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 		
-				<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg');">
+				<div class="col-md-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/quiche.jpg'); margin-left: 20px;">
 					
 					<div class="host-profile">
 						<img src="https://s3-us-west-1.amazonaws.com/yumster/host2.jpg" class= "host-pic">
@@ -133,7 +133,7 @@
 			
 						</div>
 		
-						<div class="col-md-3 col-md-offset-1 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg');">
+						<div class="col-md-3 meal-info" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/philly-cheese.jpg'); margin-left: 20px;">
 							
 							<div class="host-profile">
 								<img src="https://s3-us-west-1.amazonaws.com/yumster/host3.jpg" class= "host-pic">
