--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -108,13 +108,12 @@
 					<% } %>
 				</div>
 			</div>
-				
 			<div class="row filter-div header-bar">
 				<div class="col-md-3 filter-header">
 					<% if (meals.total_count) { %>
-					<%= meals.total_count %>
+						<%= meals.total_count %>
 					<% } else { %>
-					<%= meals.length %>
+						<%= meals.length %>
 					<% } %>
 					Matches
 					<span class="glyphicon glyphicon-chevron-down"></span>
@@ -133,14 +132,14 @@
 					<% mealPhoto = meals.models[i].get("photo_url") %>
 				<% } %>
 				
-				<div data-listing-num="<%= i %>" class="col-md-3 col-md-offset-1 meal-info" data-id ="<%= host.get('id') %>" style="background-image: url('<%= mealPhoto %>');">
-					<div class="host-profile">
+				<div data-listing-num="<%= i %>" class="col-md-3 meal-info" data-id ="<%= host.get('id') %>" style="background-image: url('<%= mealPhoto %>'); margin-left: 20px;">
+					<div class="row host-profile">
 						<img src="<%= host.get('photo_url') %>" class= "host-pic">
 						<span style="float: left; margin-left: 5px;">
 							<%= host.get("name")%>'s
 						</span>
 					</div>
-					<div class="meal-blurb">
+					<div class="row meal-blurb">
 						<p class="tag"><%= meals.models[i].get("tag") %></p>
 							<p> <%= meals.models[i].get("title") %> </p>
 								<p style="font-size: 10px;">
@@ -152,16 +151,24 @@
 			<% } %>
 		  </div>
 			
-		<% console.log("Outside conditional: " + meals.total_pages); %>
 		<% if (meals.total_pages) { %>
 		<div class="row">
 			<div class="col-md-4 col-md-offset-1" style="padding-left: 5px;">
 			<nav>
 			  <ul class="pagination">
 			    <li><a style="color: #A34775;" data-page="0" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+					<% if (page_num > 2) { %>
+						<li><a style="color: #A34775;" data-page="1" href="#"> 1 </a></li>
+					  <li> <span class="gap" style=""> ... </span></li>
+					<% } %>
 			    <li><a style="color: #A34775;" data-page="<%= page_num %>" href="#"><%= page_num %></a></li>
+					<% if (meals.total_pages >= page_num + 1) { %>
 			    <li><a style="color: #A34775;" data-page="<%= page_num + 1 %>" href="#"><%= page_num + 1 %></a></li>
-			    <li><a style="color: #A34775;" data-page="<%= page_num + 2 %>" href="#"><%= page_num + 2 %></a></li>
+					<% } %>
+					<% if (page_num + 2 < meals.total_pages) { %>
+						<li> <span class="gap" style=""> ... </span></li>
+						<li><a style="color: #A34775;" data-page="<%= meals.total_pages %>" href="#"> <%= meals.total_pages %> </a></li>
+					<% } %>
 			    <li><a style="color: #A34775;" data-page="-1" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
 			  </ul>
 			</nav>
