--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -10,7 +10,7 @@
 			<div class="cover-photo" style="background-image: url('<%= mealPhoto %>');">
 			</div>
 			<div class="row click-header" style="">
-				<div class="col-md-6 col-md-offset-5">
+				<div class="col-md-6 col-md-offset-5" style="padding-left: 0px;">
 					<span data-action="meals" class="header-button"> Meals </span>
 					<span data-action="listings" class="header-button"> Listings </span>
 				</div>
