--- a/app/assets/templates/meals/modal.jst.ejs
+++ b/app/assets/templates/meals/modal.jst.ejs
@@ -12,7 +12,7 @@
 		<% } %>
 	</h4>
 	
-	<span class='error' id='signin-errors'> </span>
+	<span class='error' id='listing-errors'> </span>
 	
 	<form class="modal-input">
 		<% if (meal.isNew()) { %>
