--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -68,7 +68,7 @@
 			<div class="col-md-3 filter-header">
 				Current Filters:
 			</div>
-			<div class="col-md-9"> <!-- style="width: 440px; margin-left: 180px;"> -->
+			<div class="col-md-9">
 				<% for (var item in filters) { %>
 					<% var date %>
 					  <% if (item === "start_date" || item === "end_date") { %>
