--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,9 @@
 	
 	<%= yield %>
 	
-	<footer class="footer">
+	<!-- <footer class="footer">
 			<p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
-	</footer>
+	</footer> -->
 	
 	<%= yield :search_script %>
 </body>
