--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -119,7 +119,7 @@ font-family: 'Quicksand', sans-serif;
 
 .meal-info {
 	position: relative;
-	background-size: 25vw 17vw; //320 * 220
+	background-size: 25vw 17vw;
 	box-shadow: inset 0 -50px 200px #000;
 	color: white;
 	width: 25vw;
@@ -128,7 +128,6 @@ font-family: 'Quicksand', sans-serif;
 	border: 10px solid white;
 	font-family: 'Quicksand', sans-serif;
 	outline: 1px solid #cccccc;
-//	margin-left: 20px;
 }
 
 .meal-info:hover {
@@ -136,9 +135,6 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .meal-blurb {
-//	position: relative;
-//	top: 120px;
-//	left: 10px;
 	float: left;
 	width: 250px;
 	margin-top: 2.5vw;
@@ -162,9 +158,6 @@ font-family: 'Quicksand', sans-serif;
 	height: 50px;
 	width: 100%;
 	margin: 10px;
-//	position: relative;
-//	top: 15px;
-//	left: 10px;
 }
 
 .footer {
@@ -186,7 +179,6 @@ font-family: 'Quicksand', sans-serif;
 
 .filter-div {
 	border-bottom: 1px solid #E7E7E7;
-//	padding: 20px;
   padding-bottom: 20px;
   padding-top: 20px;
 	font-family: 'Quicksand', sans-serif;
@@ -197,22 +189,12 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .search-bar.current-filter {
-//	border: 1px solid #47475E;//white;//#A6A6A6;//#6B2447;//black;//#A6A6A6;
-//	display: inline-block;
-//	float: left;
-//	height: 40px;
 	padding-right: 5px;
 	padding-left: 5px;
 	padding-bottom: 5px;
-//	font-family: 'Quicksand', sans-serif;
-//	font-size: 14px;
-//	color: #47475E;//white;
-//	background-color: #FF85E0;//#D66EBC;//#C530A0;
 	min-width: 85px;
 	margin-right: 10px;
 	margin-bottom: 10px;
-//#E680CC;//white;//#D4D4D6;
-//  background: -webkit-radial-gradient(center, ellipse cover, #ef8bbf 0%,#d31d84 100%); /* Chrome10+,Safari5.1+ */
 }
 
 .current-filter span {
@@ -230,9 +212,8 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .header-bar {
-	background-color: #F7F7F7;//#E7E7E7;
-	border-bottom: 1px solid #e7e7e7;//#A6A6A6;
-	//border-top: 1px solid #e7e7e7;//#A6A6A6;
+	background-color: #F7F7F7;
+	border-bottom: 1px solid #e7e7e7;
 }
 
 .header-bar:hover {
@@ -266,21 +247,20 @@ font-family: 'Quicksand', sans-serif;
 	bottom: 0;
 	margin: 0;
 	padding: 0;
-//	overflow: hidden;
 }
 
 //############ Show ############
 
 .meal-header {
-	background-color: white;//#E7E7E7;
-	border: 1px solid #e7e7e7;//#A6A6A6;
+	background-color: white;
+	border: 1px solid #e7e7e7;
 	height: 50px;
 	padding: 10px;
 }
 
 .meal-div {
-	background-color: white;//#E7E7E7;
-	border: 1px solid #e7e7e7;//#A6A6A6;
+	background-color: white;
+	border: 1px solid #e7e7e7;
 	width: 100%;
   overflow: auto;
 	padding: 15px;
@@ -289,19 +269,14 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .meal-div:hover {
-	background-color: #F8F8F8;//#F3F3F4;//#F3F3F7;
+	background-color: #F8F8F8;
 }
 
 .meal-img {
-//	left: 0px;
-//	top: 30vh;
 	width: 100%;
 	height: 50vh;
 	background-position: 50% 50%;
 	background-size: cover;
-//	background-repeat: repeat-y;
-//	background-size: cover;
-//	background-size: 400px 600px; 
 	margin-top: -12px;
 	border-right: 1px solid #e7e7e7;
 	border-left: 1px solid #e7e7e7;
@@ -344,16 +319,13 @@ font-family: 'Quicksand', sans-serif;
 }
 
 .new-review-link:hover {
-//	color: #A34775;
   font-weight: bold;
 }
 
 .guest-div {
-//	border-bottom: 1px solid #e7e7e7;
 	width: 95px;
 	float: left;
 	overflow: auto;
-//	margin-top: 5px;
 	padding-right: 10px;
 	padding-left: 10px;
 	text-align: center;
@@ -374,7 +346,6 @@ font-family: 'Quicksand', sans-serif;
 	left: 15px;
 	right: 0;
 	bottom: 0;
-//	overflow: hidden;
 }
 
 //######################## User Profile ##################################
@@ -384,7 +355,6 @@ font-family: 'Quicksand', sans-serif;
 	height: 40vh;
 	border-radius: 200px;
 	outline: none;
-//	background-size: 300px 300px;
 	margin-top: 3px;
 	background-position: 50% 50%;
 	background-size: cover;
@@ -392,7 +362,6 @@ font-family: 'Quicksand', sans-serif;
 
 .indiv-rating.about-user {
 	min-height: 100px;
-//	height: 8vh;
 	overflow: auto;
 	height: 100%;
   font-size: 12px;	
@@ -510,18 +479,3 @@ font-family: 'Quicksand', sans-serif;
 .form-header {
 	border-bottom: 1px solid #e7e7e7;
 }
-
-//.host-pic.author {
-//	width: 75px;
-//	height: 75px;
-//	border-radius: 50px;
-//	outline: none;
-//	margin: 5px;
-//	margin-left: -3px;
-//	margin-top: 10px;
-//}
-
-//img.resize{
-////    width:540px; can also use %
-//    height: auto;
-//	}
