--- a/app/assets/templates/meals/search.jst.ejs
+++ b/app/assets/templates/meals/search.jst.ejs
@@ -2,7 +2,7 @@
 
 	<div class="row">
 	
-		<div class="col-md-5" style="height: 100vh;" id="map">
+		<div class="col-md-5" style="height: 100vh;" id="map" data-toggle="tooltip" data-placement="right" title="Click on a pin to view its info window.">
 		</div>
 	
 		<div class="col-md-7" id="search-content">
@@ -11,3 +11,9 @@
 	</div>
 	
 </div>
+
+<script>
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
