--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -64,7 +64,7 @@
 			</div>
 		</div>
 			
-		<div class="row filter-div">
+		<div class="row filter-div" data-toggle="tooltip" data-placement="bottom" title="Cancel a set filter by clicking the x.">
 			<div class="col-md-3 filter-header">
 				Current Filters:
 			</div>
@@ -156,12 +156,14 @@
 			<div class="col-md-4 col-md-offset-1" style="padding-left: 5px;">
 			<nav>
 			  <ul class="pagination">
+					<% if (page_num !== 1) { %>
 			    <li><a style="color: #A34775;" data-page="0" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+					<% } %>
 					<% if (page_num > 2) { %>
 						<li><a style="color: #A34775;" data-page="1" href="#"> 1 </a></li>
 					  <li> <span class="gap" style=""> ... </span></li>
 					<% } %>
-			    <li><a style="color: #A34775;" data-page="<%= page_num %>" href="#"><%= page_num %></a></li>
+			    <li><a style="color: #A34775; background-color: #e7e7e7;" data-page="<%= page_num %>" href="#"><%= page_num %></a></li>
 					<% if (meals.total_pages >= page_num + 1) { %>
 			    <li><a style="color: #A34775;" data-page="<%= page_num + 1 %>" href="#"><%= page_num + 1 %></a></li>
 					<% } %>
@@ -169,9 +171,17 @@
 						<li> <span class="gap" style=""> ... </span></li>
 						<li><a style="color: #A34775;" data-page="<%= meals.total_pages %>" href="#"> <%= meals.total_pages %> </a></li>
 					<% } %>
+					<% if (meals.total_pages >= page_num + 2) { %>
 			    <li><a style="color: #A34775;" data-page="-1" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+					<% } %>
 			  </ul>
 			</nav>
 			</div>
 		</div>
 		<% } %>
+		
+	<script>
+	$(function () {
+	  $('[data-toggle="tooltip"]').tooltip()
+	})
+	</script>
