--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -63,8 +63,8 @@
 					<% } %>
 				</select>
 		
-				<input id="location-search" type="text" name="location" class="search-bar" placeholder="Location" style="width: 230px;" data-toggle="tooltip" data-placement="bottom" title="Get started by searching for meals in San Francisco, Mountain View, Cupertino, or Sunnyvale. ">
-		    <input placeholder="Start Date" name="start_date" class="search-bar" class="textbox-n" type="text" onfocus="(this.type='date')" data-toggle="tooltip" data-placement="bottom" title="Try searching for dates in the current month.">
+				<input id="location-search" type="text" name="location" class="search-bar" placeholder="Location" style="width: 230px;" data-toggle="tooltip" data-placement="top" title="Get started by searching for meals in San Francisco, Mountain View, Cupertino, or Sunnyvale. ">
+		    <input placeholder="Start Date" name="start_date" class="search-bar" class="textbox-n" type="text" onfocus="(this.type='date')" data-toggle="tooltip" data-placement="top" title="Try searching for dates in the current month.">
 				<input placeholder="End Date" name="end_date" class="search-bar" class="textbox-n" type="text" onfocus="(this.type='date')">
 			
 				<select class="search-bar" name="guest_num">
