--- a/app/assets/templates/meals/show.jst.ejs
+++ b/app/assets/templates/meals/show.jst.ejs
@@ -55,10 +55,10 @@
 			
 		</div>
 		
-		<div class="col-md-4" style="margin-left: 20px; height: 100vh;">
+		<div class="col-md-4 people-info">
 			<div style="height: 50px; width: auto;"> </div>
 			
-			<div class="people-info">
+			<!-- <div class="people-info"> -->
 			
 			<div class="row" data-toggle="tooltip" data-placement="bottom" title="Sign in as a guest user to be able to join meals and write reviews.">
 				<h3 class="meal-header" style="background-color: #A34775; color: white;"> Join This Meal </h3>
@@ -109,7 +109,7 @@
 			  </div> <!-- host info -->
 		  </div>
 			
-			<div class="row">
+			<div class="row" style="margin-bottom: 20px;">
 				<h3 class="meal-header"> Meet the Guests </h3>
 				<div class="meal-div"style="padding-left: 2vw;">
 					<% meal.guests().forEach( function (guest) { %>
@@ -126,7 +126,7 @@
 			</div>
 			 
 			</div> <!-- close right side content -->
-		</div> <!-- right side -->
+		<!-- </div>  -->
 		
 	</div> <!-- main div -->
 
