--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-md-3 col-md-offset-1" style="margin-top: -200px;">
+			<div class="col-md-3 col-md-offset-1" style="margin-top: -25vh;">
 		
 				<div class="host-pic user profile" style="background-image: url('<%= user.get("photo_url") %>');"> </div>
 				<h2> <%= user.get("name") %> </h2>
