--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,12 @@
 	
 	<%= yield %>
 	
-	<!-- <footer class="footer">
-			<p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
-	</footer> -->
+	<!-- <div class="before-footer">
+	</div> -->
 	
 	<%= yield :search_script %>
 </body>
+	<footer class="footer">
+			<p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
+	</footer>
 </html>
