--- a/app/assets/templates/meals/show.jst.ejs
+++ b/app/assets/templates/meals/show.jst.ejs
@@ -60,7 +60,7 @@
 			
 			<!-- <div class="people-info"> -->
 			
-			<div class="row" data-toggle="tooltip" data-placement="bottom" title="Sign in as a guest user to be able to join meals and write reviews.">
+			<div class="row">
 				<h3 class="meal-header" style="background-color: #A34775; color: white;"> Join This Meal </h3>
 				<div class="meal-div">
 					<div class="row" style="margin-left: 0px;">
