--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,56 @@
 	<%= yield :search_script %>
 </body>
 	<footer class="footer">
-			<p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
+		<div class="row" style="margin-bottom: 50px;">
+			<div class="col-md-2 col-md-offset-2" style="padding-left: 3vw;">
+				<h4 class="bold">Company</h4>
+				<p><a class="footer-link" href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Jobs</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Press</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Blog</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Help</a></p>
+			</div>
+			<div class="col-md-3 col-md-offset-1" style="padding-left: 4vw;">
+				<h4 class="bold">Discover</h4>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Mobile</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Trust & Safety</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Invite Friends</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Yumster Picks</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Site Map</a></p>
+			</div>
+			<div class="col-md-3" style="padding-left: 5vw;">
+				<h4 class="bold">Hosting</h4>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Why Host</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Hospitality</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Responsible Hosting</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Home Safety</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Stories</a></p>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2 footer-contact">
+				
+				<div class="row">
+					<div class="col-md-2 col-md-offset-5">
+				    <h4 class="bold"> Join Us On </h4>
+					</div>
+				</div>
+				
+				<div class="row">
+					<div class="col-md-2 col-md-offset-5">
+						<a href="https://github.com/azorko" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/github.png');"></a>
+						<a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/linked_in.png');"></a>
+					</div>
+				</div>		
+				
+				<div class="row">
+					<div class="col-md-4 col-md-offset-4">
+				    <p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
+					</div>
+				</div>
+						
+				</div>
+			</div>
 	</footer>
 </html>
