--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 							<input id="header-lng" type="hidden" name="lng">
 							<input style="border-radius: 0px; -webkit-appearance: none; width: 230px;" type='text' id='location-header' class='form-control' name='location' placeholder='Location'>
 						</div>
-						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' id="button-header" class='btn btn-default' data-toggle="tooltip" data-placement="bottom" title="Get started by searching for meals in San Francisco, Mountain View, Cupertino, or Sunnyvale.">Search</button>
+						<button style="border-radius: 0px; -webkit-appearance: none; margin-left: -4px;" type='submit' id="button-header" class='btn btn-default' data-toggle="tooltip" data-placement="bottom" title="Get started by searching for meals in San Francisco, or Sunnyvale.">Search</button>
 					</form>
 				</li>
 								
@@ -31,7 +31,7 @@
 						<img src="<%= current_user.photo_url %>" class= "host-pic">
 					</li>
 					
-					<li class='left-nav-list-item' style="margin-left: 5px;">
+					<li class='left-nav-list-item' style="margin-left: 5px;" data-toggle="tooltip" data-placement="bottom" title="Sign in as a guest user to be able to join meals and write reviews.">
 					<div class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
 						<%= current_user.name %>
 						<span class="caret"></span>
